--- a/eRestaurantDemo/eRestaurantWebsite/Site.master
+++ b/eRestaurantDemo/eRestaurantWebsite/Site.master
@@ -53,6 +53,7 @@
                         <li><a runat="server" href="~/">Home</a></li>
                         <li><a runat="server" href="~/SamplePages/SpecialEventsAdmin.aspx">SpecialEvents</a></li>
                         <li><a runat="server" href="~/SamplePages/ListView.aspx">ListView Display</a></li>
+                        <li><a runat="server" href="~/SamplePages/ReservationsByDate.aspx">Reservation by Date</a></li>
                         <li><a runat="server" href="~/About">About</a></li>
                         <li><a runat="server" href="~/Contact">Contact</a></li>
                     </ul>
