--- a/eRestaurantDemo/eRestaurantWebsite/Site.master
+++ b/eRestaurantDemo/eRestaurantWebsite/Site.master
@@ -55,6 +55,7 @@
                         <li><a runat="server" href="~/SamplePages/Listview">Listview Display</a></li>
                         <li><a runat="server" href="~/SamplePages/ReservationsByDate">Repeater Display</a></li>
                         <li><a runat="server" href="~/SamplePages/CategoryMenuItems">Repeater2 Display</a></li>
+                        <li><a runat="server" href="~/CommandPages/SpecialEventsAdmin.aspx">ListViewCRUD</a></li>
                         <li><a runat="server" href="~/About">About</a></li>
                         <li><a runat="server" href="~/Contact">Contact</a></li>
                     </ul>
