--- a/eRestaurantDemo/eRestaurantWebsite/Site.master
+++ b/eRestaurantDemo/eRestaurantWebsite/Site.master
@@ -46,26 +46,22 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" runat="server" href="~/">Don Welch</a>
+                    <a class="navbar-brand" runat="server" href="~/">William Hoang</a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a runat="server" href="~/">Home</a></li>
                         <li><a runat="server" href="~/SamplePages/SpecialEventsAdmin">SpecialEvents</a></li>
-                        <li><a runat="server" href="~/SamplePages/Listview">Listview Display</a></li>
-                        <li><a runat="server" href="~/SamplePages/ReservationsByDate">Repeater Display</a></li>
-                        <li><a runat="server" href="~/SamplePages/CategoryMenuItems">Repeater2 Display</a></li>
-                        <li><a runat="server" href="~/CommandPages/SpecialEventsAdmin.aspx">ListViewCRUD</a></li>
+                        <li><a runat="server" href="~/SamplePages/Listview">LV Reservations</a></li>
+                        <li><a runat="server" href="~/SamplePages/ReservationsByDate">Rpr Reservations</a></li>
+                        <li><a runat="server" href="~/SamplePages/CategoryMenuItems">Rpr CatMenuItems</a></li>
+                        <li><a runat="server" href="~/CommandPages/SpecialEventsAdmin">LV CRUD</a></li>
+                         <li><a runat="server" href="~/CommandPages/WaiterAdmin">Single Row CRUD</a></li>
                         <li><a runat="server" href="~/About">About</a></li>
                         <li><a runat="server" href="~/Contact">Contact</a></li>
                     </ul>
                     <asp:LoginView runat="server" ViewStateMode="Disabled">
-                        <AnonymousTemplate>
-                            <ul class="nav navbar-nav navbar-right">
-                                <li><a runat="server" href="~/Account/Register">Register</a></li>
-                                <li><a runat="server" href="~/Account/Login">Log in</a></li>
-                            </ul>
-                        </AnonymousTemplate>
+                        
                         <LoggedInTemplate>
                             <ul class="nav navbar-nav navbar-right">
                                 <li><a runat="server" href="~/Account/Manage" title="Manage your account">Hello, <%: Context.User.Identity.GetUserName()  %>!</a></li>
