--- a/eRestaurantDemo/eRestaurantWebsite/Site.master
+++ b/eRestaurantDemo/eRestaurantWebsite/Site.master
@@ -57,7 +57,8 @@
                         <li><a runat="server" href="~/SamplePages/CategoryMenuItems">Rpr CatMenuItems</a></li>
                         <li><a runat="server" href="~/CommandPages/SpecialEventsAdmin">LV CRUD</a></li>
                          <li><a runat="server" href="~/CommandPages/WaiterAdmin">Single Row CRUD</a></li>
-                        <li><a runat="server" href="~/Reports/MenuCategoryItemReport.aspx">Report</a></li>
+                        <li><a runat="server" href="~/Reports/MenuCategoryItemReport.aspx">Menu Category Items Report</a></li>
+                        <li><a runat="server" href="~/Reports/WaiterBillingReport.aspx">Waiter Billling Report</a></li>
 
                     </ul>
                     <asp:LoginView runat="server" ViewStateMode="Disabled">
