--- a/eRestaurantDemo/eRestaurantWebsite/Site.master
+++ b/eRestaurantDemo/eRestaurantWebsite/Site.master
@@ -46,15 +46,10 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" runat="server" href="~/">William Hoang</a>
+                    <a class="navbar-brand" runat="server" href="~/">Don Welch</a>
                 </div>
                 <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">
-                        <li><a runat="server" href="~/">Home</a></li>
-                        <li><a runat="server" href="~/SamplePages/SpecialEventsAdmin.aspx">SpecialEvents</a></li>
-                        <li><a runat="server" href="~/About">About</a></li>
-                        <li><a runat="server" href="~/Contact">Contact</a></li>
-                    </ul>
+ 
                     <asp:LoginView runat="server" ViewStateMode="Disabled">
                         <AnonymousTemplate>
                             <ul class="nav navbar-nav navbar-right">
@@ -71,6 +66,44 @@
                             </ul>
                         </LoggedInTemplate>
                     </asp:LoginView>
+
+                     <asp:Menu ID="navMenu" runat="server" 
+
+                    BackColor="#000000" BorderColor="Red"
+                    StaticMenuItemStyle-ForeColor="#999999" 
+                    StaticMenuItemStyle-VerticalPadding="10px"
+                    StaticMenuItemStyle-HorizontalPadding="10px"
+                    RenderingMode="List" Orientation="Horizontal" 
+                    DynamicMenuItemStyle-ForeColor="#999999" 
+                    DynamicMenuStyle-BackColor="Black">
+                    <Items>
+                        <asp:MenuItem Text="Home" NavigateUrl="~/"></asp:MenuItem>
+
+                        <asp:MenuItem Text="Queries" Value="Queries">
+                            <asp:MenuItem Text="SpecialEvents" NavigateUrl="~/SamplePages/SpecialEventsAdmin"></asp:MenuItem>
+                            <asp:MenuItem Text="ListView Reservations" NavigateUrl="~/SamplePages/Listview"></asp:MenuItem>
+                            <asp:MenuItem Text="Repeater Reservations By Date" NavigateUrl="~/SamplePages/ReservationsByDate"></asp:MenuItem>
+                            <asp:MenuItem Text="Repeater Category MenuItems" NavigateUrl="~/SamplePages/CategoryMenuItems"></asp:MenuItem>
+                        </asp:MenuItem>
+
+                         <asp:MenuItem Text="CRUD" Value="CRUD">
+                            <asp:MenuItem Text="ListView CRUD" NavigateUrl="~/CommandPages/SpecialEventsAdmin"></asp:MenuItem>
+                            <asp:MenuItem Text="Waiter 1517 CRUD" NavigateUrl="~/CommandPages/WaiterAdmin"></asp:MenuItem>
+                         </asp:MenuItem>
+                        
+
+                         <asp:MenuItem Text="Reports" Value="Reports">
+                            <asp:MenuItem Text="MenuCategory Items" NavigateUrl="~/Reports/MenuCategoryItemReport"></asp:MenuItem>
+                           <asp:MenuItem Text="Waiter Billing" NavigateUrl="~/Reports/WaiterBillingReport"></asp:MenuItem>
+                         </asp:MenuItem>
+
+                        <asp:MenuItem Text="Front Desk" NavigateUrl="~/UXPages/FrontDesk.aspx"></asp:MenuItem>
+
+                         <asp:MenuItem Text="About Us" NavigateUrl="~/About.aspx"></asp:MenuItem>
+                         <asp:MenuItem Text="Contact Us" NavigateUrl="~/Contact.aspx"></asp:MenuItem>
+                    </Items>
+                </asp:Menu>
+
                 </div>
             </div>
         </div>
