--- a/eRestaurantDemo/eRestaurantWebsite/Site.master
+++ b/eRestaurantDemo/eRestaurantWebsite/Site.master
@@ -46,7 +46,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" runat="server" href="~/">Don Welch</a>
+                    <a class="navbar-brand" runat="server" href="~/">William Hoang</a>
                 </div>
                 <div class="navbar-collapse collapse">
  
